; ModuleID = '/home/carl/AnghaBench/git/extr_branch.c_read_branch_desc.c'
source_filename = "/home/carl/AnghaBench/git/extr_branch.c_read_branch_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [22 x i8] c"branch.%s.description\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @read_branch_desc(%struct.strbuf* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.strbuf, align 4
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* null, i8** %6, align 8
  %8 = bitcast %struct.strbuf* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @strbuf_addf(%struct.strbuf* %7, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %7, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @git_config_get_string(i32 %12, i8** %6)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 @strbuf_release(%struct.strbuf* %7)
  store i32 -1, i32* %3, align 4
  br label %24

17:                                               ; preds = %2
  %18 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @strbuf_addstr(%struct.strbuf* %18, i8* %19)
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @free(i8* %21)
  %23 = call i32 @strbuf_release(%struct.strbuf* %7)
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %17, %15
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #2

declare dso_local i64 @git_config_get_string(i32, i8**) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #2

declare dso_local i32 @free(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
